# oop4.lena

./: CMakeLists.txt  Lux.cpp  Lux.h  Multiseat.cpp  Multiseat.h  Room.cpp  Room.h  Standart.cpp  Standart.h  Table.cpp  Table.h  dialog.cpp  dialog.h  getnum.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
