cmake_minimum_required(VERSION 3.17)
project(oop4_lena)

set(CMAKE_CXX_STANDARD 14)
add_library(dialog dialog.h dialog.cpp)
link_libraries(dialog)
add_library(Lux Lux.cpp Lux.h)
link_libraries(Lux)
add_library(Multiseat Multiseat.cpp Multiseat.h)
link_libraries(Multiseat)
add_library(Standart Standart.h Standart.cpp)
link_libraries(Standart)
add_library(Table Table.cpp Table.h)
link_libraries(Table)
add_library(Room Room.cpp Room.h)
link_libraries(Room)
add_executable(oop4_lena main.cpp getnum.h)
